--- a/music.html
+++ b/music.html
@@ -47,7 +47,6 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a href="/about">About</a></li>
                 <li class="nav-item"><a href="/design">Design</a></li>
-                <li class="nav-item"><a href="/quotes">Quotes</a></li>
                 <li class="nav-item"><a href="/music">Music</a></li>
             </ul>
         </nav>
@@ -126,7 +125,7 @@
                                 <i class="fab fa-instagram"></i>
                             </a>
                         <li class="social-link">
-                            <a href="https://line.me/ti/p/~mo.banzu" aria-label="LINE" target="_blank">
+                            <a href="https://line.me/ti/p/~mo-banzu" aria-label="LINE" target="_blank">
                                 <i class="fab fa-line"></i>
                             </a>
                         </li>
