--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <p>In a room full of ice cream, I'd still stare at you.</p>
                 </div>
                 <div class="cta-container line-container">
-                    <a href="https://line.me/ti/p/~mobanzu" class="cta line-button">
+                    <a href="https://line.me/ti/p/~mo-banzu" class="cta line-button">
                         <img src="./img/line.svg" alt="LINE Icon">
-                        <span>LINE App</span>
+                        <span>LINE Messenger</span>
                     </a>
                 </div>
             </div>
