--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Andre Pradana</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta charset="UTF-8">
-    <meta property="og:title" content="Mo-banzu" />
+    <meta property="og:title" content="N._.N" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://Mo-banzu.github.io" />
-    <meta property="og:description" content="Hi! I'm Mo-banzu. In a room full of ice cream, I'd still stare at you." />
+    <meta property="og:description" content="Hi! I'm Suradet Konsan." />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/14011726/94132137-7d4fc100-fe7c-11ea-8512-69f90cb65e48.png" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Mo-banzu">
     <meta name="twitter:description" content="Welcome to My Website.">
@@ -49,13 +49,13 @@
         <section id="home">
             <div class="landing-page-details">
                 <h1 class="small-title">Hi,</h1>
-                <h2 class="big-title">I'm <span class="my-name pink">Andre Pradana</span></h2>
-                <h3 class="medium-title"><em>Contact Me on <a class="pink" href="mailto:mbandu.ilik@gmail.com">Email </a></em></h3>
+                <h2 class="big-title">I'm <span class="my-name pink">Suradet Konsan</span></h2>
+                <h3 class="medium-title"><em>Contact Me on <a class="pink" href="mailto:pmmx.ui@gmail.com">Email </a></em></h3>
                 <div class="short-bio">
-                    <p>In a room full of ice cream, I'd still stare at you.</p>
+                    <p>Website DEMO</p>
                 </div>
                 <div class="cta-container line-container">
-                    <a href="https://line.me/ti/p/~mo-banzu" class="cta line-button">
+                    <a href="https://line.me/ti/p/~xiv.n" class="cta line-button">
                         <img src="./img/line.svg" alt="LINE Icon">
                         <span>LINE Messenger</span>
                     </a>
