--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="landing-page-socials">
                 <ul>
                     <li class="social-link">
-                        <a href="https://www.facebook.com/HELLTERHEAD/" aria-label="Facebook" target="_blank">
+                        <a href="https://www.facebook.com/Tp14x" aria-label="Facebook" target="_blank">
                             <i class="fab fa-facebook"></i>
                         </a>
                     </li>
