--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <meta name="twitter:title" content="Mo-banzu">
     <meta name="twitter:description" content="Welcome to My Website.">
     <meta name="twitter:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png">
-    <meta name="twitter:site" content="@mo-banzu">
+    <meta name="twitter:site" content="@xiv.n / N._.N">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="copyright" content="Mo-banzu">
+    <meta name="copyright" content="NACK">
     <meta name="description" content="Welcome to My Website.">
     <meta name="keywords" content="In a room full of ice cream, I'd still stare at you.">
     <meta name="robots" content="noindex, nofollow" />
@@ -72,22 +72,7 @@
                         </a>
                     </li>
                     <li class="social-link">
-                        <a href="https://github.com/Mo-banzu" aria-label="GitHub" target="_blank">
-                            <i class="fab fa-github"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://twitter.com/mo_banzu" aria-label="Twitter" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://instagram.com/mo.banzu" aria-label="Instagram" target="_blank">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <li class="social-link">
-                        <a href="https://line.me/ti/p/~mo-banzu" aria-label="LINE" target="_blank">
+                        <a href="https://line.me/ti/p/~xiv.n" aria-label="LINE" target="_blank">
                             <i class="fab fa-line"></i>
                         </a>
                     </li>
@@ -103,7 +88,7 @@
     <footer class="footer-container">
         <div class="footer">
             <div class="footer-column">
-                <span class="copyright"><i class="fas fa-copyright"></i> 2020 Mo-banzu</span>
+                <span class="copyright"><i class="fas fa-copyright"></i> 2025 N._.N</span>
             </div>
     </footer>
     <script src="./js/main.js"></script>
