--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en,id">
+<html lang="en,th">
 
 <head>
     <title>Andre Pradana</title>
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="N._.N" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://Mo-banzu.github.io" />
+    <meta property="og:url" content="https://tp14x.github.io/N._.N" />
     <meta property="og:description" content="Hi! I'm Suradet Konsan." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://user-images.githubusercontent.com/14011726/94132137-7d4fc100-fe7c-11ea-8512-69f90cb65e48.png" />
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-logo">@mo-banzu</a>
+        <a href="/" class="header-logo">@xiv.n / N._.N</a>
         <nav class="nav">
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
