--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="About Me | Mo-banzu" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://Mo-banzu.github.io/about" />
+    <meta property="og:url" content="https://tp14x.github.io/N._.N/about" />
     <meta property="og:description" content="Hi! I'm Mo-banzu. In, a room full ice cream, I'd still stare at you." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png" />
@@ -22,7 +22,7 @@
     <meta name="description" content="Hi! I'm Mo-banzu. In, a room full ice cream, I'd still stare at you.">
     <meta name="keywords" content="Andre Pradana, In, a room full ice cream, I'd still stare at you.">
     <meta name="robots" content="noindex, nofollow" />
-    <link rel="canonical" href="https://Mo-banzu.github.io/about" />
+    <link rel="canonical" href="https://tp14x.github.io/N._.N/about" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
@@ -71,7 +71,7 @@
                         </div>
                         <div class="statement">
                             <p class="input">mo-banzu.<span class="green">languages</span></p>
-                            <p class="return">[indonesian, english]</p>
+                            <p class="return">[thailand, english]</p>
                         </div>
                         <div class="statement">
                             <p class="input">mo-banzu.<span class="green">activity</span></p>
