--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="description" content="Welcome to My Website.">
     <meta name="keywords" content="In a room full of ice cream, I'd still stare at you.">
     <meta name="robots" content="noindex, nofollow" />
-    <link rel="canonical" href="https://Mo-banzu.github.io" />
+    <link rel="canonical" href="https://tp14x.github.io/N._.N/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
