--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
-<html lang="en,id">
+<html lang="en,th">
 
 <head>
-    <title>About Me | Mo-banzu</title>
+    <title>About Me | NACK</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta charset="UTF-8">
-    <meta property="og:title" content="About Me | Mo-banzu" />
+    <meta property="og:title" content="About Me | NACK" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tp14x.github.io/N._.N/about" />
     <meta property="og:description" content="Hi! I'm Mo-banzu. In, a room full ice cream, I'd still stare at you." />
@@ -16,11 +16,11 @@
     <meta name="twitter:title" content="About Me | Mo-banzu">
     <meta name="twitter:description" content="Hi! I'm Mo-banzu. I have been learning with computers and technology for most of my life being the go-to tech support for friends and family, and Nothing special here, Maybe there will be something special here.">
     <meta name="twitter:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png">
-    <meta name="twitter:site" content="@mo-banzu">
+    <meta name="twitter:site" content="@xiv.n / N._.N">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="copyright" content="Mo-banzu">
-    <meta name="description" content="Hi! I'm Mo-banzu. In, a room full ice cream, I'd still stare at you.">
-    <meta name="keywords" content="Andre Pradana, In, a room full ice cream, I'd still stare at you.">
+    <meta name="copyright" content="Suradet Konsan">
+    <meta name="description" content="Hi! I'm Suradet. In, a room full ice cream, I'd still stare at you.">
+    <meta name="keywords" content="Suradet Konsan, In, a room full ice cream, I'd still stare at you.">
     <meta name="robots" content="noindex, nofollow" />
     <link rel="canonical" href="https://tp14x.github.io/N._.N/about" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,7 +34,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-logo">@mo-banzu</a>
+        <a href="/" class="header-logo">@xiv.n / N._.N</a>
         <nav class="nav">
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
@@ -50,7 +50,7 @@
                 <img src="./img/me.svg" alt="Smile Icon">
                 <h2>Mo-banzu.<span class="pink">profile</span></h2>
             </div>
-            <p class="section-description"> Hi! I'm Andre Pradana. I've been studying with computers and technology for most of my life being technical support for friends and family, and Nothing special here, Maybe there will be something special here.</p>
+            <p class="section-description"> Hi! I'm Suradet Konsan. I've been studying with computers and technology for most of my life being technical support for friends and family, and Nothing special here, Maybe there will be something special here.</p>
             <div class="profile-container">
                 <div class="me-icon-container">
                     <img class="me-icon" src="./img/me-icon.gif" alt="Icon of myself is a cartoon character in the Tokyo Ghoul anime named Juuzou Suzuya" title="Juuzou Suzuya. Boku wa jibun ga mukatsuku yatsu wa dou natte mo ii desu.">
@@ -66,16 +66,16 @@
                     </div>
                     <div class="terminal-window">
                         <div class="statement">
-                            <p class="input"> mo-banzu.<span class="green">location</span></p>
-                            <p class="return">east java, indonesia</p>
+                            <p class="input"> Nack.<span class="green">location</span></p>
+                            <p class="return">Phrae , thailand</p>
                         </div>
                         <div class="statement">
-                            <p class="input">mo-banzu.<span class="green">languages</span></p>
+                            <p class="input">Nack.<span class="green">languages</span></p>
                             <p class="return">[thailand, english]</p>
                         </div>
                         <div class="statement">
-                            <p class="input">mo-banzu.<span class="green">activity</span></p>
-                            <p class="return">[drawing, coding, listening music]</p>
+                            <p class="input">Nack.<span class="green">activity</span></p>
+                            <p class="return">[coding, listening music]</p>
                         </div>
                         <div class="statement">
                             <p class="input bottom"><span></span></p>
@@ -106,29 +106,17 @@
                 Feel free to send me a message or mention me in a post.
             </p>
             <div class="social-media-list">
-                <a href="mailto:mbandu.ilik@gmail.com" class="social-media-item">
+                <a href="mailto:pmmx.ui@gmail.com" class="social-media-item">
                     <i class="fas fa-envelope"></i>
                     Send me an Email
                 </a>
-                <a href="https://line.me/ti/p/~mo-banzu" class="social-media-item">
+                <a href="https://line.me/ti/p/~xiv.n" class="social-media-item">
                     <i class="fab fa-line"></i>
                     Chat me an LINE Messenger
                 </a>
-                <a href="https://www.facebook.com/HELLTERHEAD/" class="social-media-item">
+                <a href="https://www.facebook.com/Tp14x" class="social-media-item">
                     <i class="fab fa-facebook"></i>
                     Connect on Facebook
-                </a>
-                <a href="https://github.com/Mo-banzu" class="social-media-item">
-                    <i class="fab fa-github"></i>
-                    Check out my projects on GitHub
-                </a>
-                <a href="https://twitter.com/mo_banzu" class="social-media-item">
-                    <i class="fab fa-twitter"></i>
-                    Follow or DM on Twitter
-                </a>
-                <a href="https://www.instagram.com/mo.banzu/" class="social-media-item">
-                    <i class="fab fa-instagram"></i>
-                    Follow or DM on Instagram
                 </a>
             </div>
         </section>
@@ -139,33 +127,19 @@
                 <div class="socials">
                     <ul>
                         <li class="social-link">
-                            <a href="https://www.facebook.com/HELLTERHEAD/" aria-label="Facebook"
+                            <a href="https://www.facebook.com/Tp14x" aria-label="Facebook"
                                 target="_blank">
                                 <i class="fab fa-facebook"></i>
                             </a>
                         </li>
                         <li class="social-link">
-                            <a href="https://github.com/Mo-banzu" aria-label="GitHub" target="_blank">
-                                <i class="fab fa-github"></i>
-                            </a>
-                        </li>
-                        <li class="social-link">
-                            <a href="https://twitter.com/mo_banzu" aria-label="Twitter" target="_blank">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li class="social-link">
-                            <a href="https://instagram.com/mo.banzu" aria-label="Instagram" target="_blank">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        <li class="social-link">
-                            <a href="https://line.me/ti/p/~mo-banzu" aria-label="LINE" target="_blank">
+                            <a href="https://line.me/ti/p/~xiv.n" aria-label="LINE" target="_blank">
                                 <i class="fab fa-line"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
-            <span class="copyright"><i class="fas fa-copyright"></i> 2020 Mo-banzu</span>
+            <span class="copyright"><i class="fas fa-copyright"></i> 2025 N._.N</span>
         </div>
     </footer>
     <script src="./js/main.js"></script>
