--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="About Me | Mo-banzu">
-    <meta name="twitter:description" content="Hi! I'm Mo-banzu. I have been learning with computers and technology for most of my life being the go-to tech support for friends and family, and Nothing special here, Maybe there will be something special here.">
+    <meta name="twitter:title" content="About Me | Nack">
+    <meta name="twitter:description" content="Hi! I'm Nack. I have been learning with computers and technology for most of my life being the go-to tech support for friends and family, and Nothing special here, Maybe there will be something special here.">
     <meta name="twitter:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png">
     <meta name="twitter:site" content="@xiv.n / N._.N">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
