--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav class="nav">
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="/about">About</a></li>
+                <li class="nav-item"><a href="about.html">About</a></li> <!-- แก้ไขจาก /about เป็น about.html -->
                 <li class="nav-item"><a href="/design">Design</a></li>
                 <li class="nav-item"><a href="/music">Music</a></li>
             </ul>
