--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en,th">
 
 <head>
-    <title>Andre Pradana</title>
+    <title>N._.N / Suradet K.</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta charset="UTF-8">
     <meta property="og:title" content="N._.N" />
