--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
         <nav class="nav">
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="/about">About</a></li>
-                <li class="nav-item"><a href="/design">Design</a></li>
-                <li class="nav-item"><a href="/music">Music</a></li>
+                <li class="nav-item"><a href="about.html">About</a></li>
+                <li class="nav-item"><a href="desig.html">Design</a></li>
+                <li class="nav-item"><a href="music.html">Music</a></li>
             </ul>
         </nav>
     </header>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="terminal-container">
                     <div class="terminal-header">
-                        <div id="terminal-title">mo-banzu.exe</div>
+                        <div id="terminal-title">14Jan2004.exe</div>
                         <div class="right-side-buttons">
                             <i class="fas fa-window-minimize"></i>
                             <i class="fas fa-window-restore"></i>
