--- a/design.html
+++ b/design.html
@@ -3,12 +3,12 @@
 <html lang="en,id">
 
 <head>
-    <title>Design | Mo-banzu</title>
+    <title>Design | Nack</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta charset="UTF-8">
-    <meta property="og:title" content="Design | Mo-banzu" />
+    <meta property="og:title" content="Design | Nack" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://Mo-banzu.github.io/design" />
+    <meta property="og:url" content="https://tp14x.github.io/N._.N/design.html" />
     <meta property="og:description" content="Here is a showcase of some of my random design." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png" />
@@ -16,13 +16,13 @@
     <meta name="twitter:title" content="Design | Mobanzu">
     <meta name="twitter:description" content="Showcase of some of my random design.">
     <meta name="twitter:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png">
-    <meta name="twitter:site" content="@mo-banzu">
+    <meta name="twitter:site" content="@xiv.n / N._.N">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="copyright" content="Mo-banzu">
+    <meta name="copyright" content="Nack">
     <meta name="description" content="Here is a showcase of some of my random design.">
     <meta name="keywords" content="Mo-banzu, Nothing Here, Maybe there will be something special here.">
     <meta name="robots" content="noindex, nofollow" />
-    <link rel="canonical" href="https://Mo-banzu.github.io/design" />
+    <link rel="canonical" href="https://tp14x.github.io/N._.N/design.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
@@ -34,13 +34,13 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-logo">@mo-banzu</a>
+        <a href="/" class="header-logo">@xiv.n / N._.N</a>
         <nav class="nav">
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="/about">About</a></li>
-                <li class="nav-item"><a href="/design">Design</a></li>
-                <li class="nav-item"><a href="/music">Music</a></li>
+                <li class="nav-item"><a href="about.html">About</a></li>
+                <li class="nav-item"><a href="design.html">Design</a></li>
+                <li class="nav-item"><a href="music.html">Music</a></li>
             </ul>
         </nav>
     </header>
