--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="desig.html">Design</a></li>
+<!--                <li class="nav-item"><a href="desig.html">Design</a></li>  --!>
                 <li class="nav-item"><a href="music.html">Music</a></li>
             </ul>
         </nav>
