--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="N._.N" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tp14x.github.io/N._.N" />
+    <meta property="og:url" content="https://tp14x.github.io/N._.N/" />
     <meta property="og:description" content="Hi! I'm Suradet Konsan." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://user-images.githubusercontent.com/14011726/94132137-7d4fc100-fe7c-11ea-8512-69f90cb65e48.png" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Mo-banzu">
+    <meta name="twitter:title" content="Nack._.N">
     <meta name="twitter:description" content="Welcome to My Website.">
     <meta name="twitter:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png">
     <meta name="twitter:site" content="@xiv.n / N._.N">
@@ -80,7 +80,7 @@
         </section>
         <p class="section-description">
             Here are some of the projects I have worked on.<br>
-            You can find more on <a class="hyperlink" href="https://github.com/Mo-banzu">GitHub</a></em></h3>.
+            You can find more on <a class="hyperlink" href="https://facebook.com/Tp14x">Facebook</a></em></h3>.
         </p>
         </section>
     </main>
