--- a/music.html
+++ b/music.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-logo">@mo-banzu</a>
+        <a href="https://tp14x.github.io/N._.N/" class="header-logo">@xiv.n / N._.N</a>
         <nav class="nav">
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
