--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/" class="header-logo">@xiv.n / N._.N</a>
+        <a href="https://tp14x.github.io/N._.N/" class="header-logo">@xiv.n / N._.N</a>
         <nav class="nav">
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
