--- a/music.html
+++ b/music.html
@@ -105,32 +105,18 @@
                 <div class="socials">
                     <ul>
                         <li class="social-link">
-                            <a href="https://www.facebook.com/HELLTERHEAD/" aria-label="Facebook" target="_blank">
+                            <a href="https://www.facebook.com/Tp14x" aria-label="Facebook" target="_blank">
                                 <i class="fab fa-facebook"></i>
                             </a>
                         </li>
                         <li class="social-link">
-                            <a href="https://github.com/Mo-banzu" aria-label="GitHub" target="_blank">
-                                <i class="fab fa-github"></i>
-                            </a>
-                        </li>
-                        <li class="social-link">
-                            <a href="https://twitter.com/mo_banzu" aria-label="Twitter" target="_blank">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li class="social-link">
-                            <a href="https://instagram.com/mo.banzu" aria-label="Instagram" target="_blank">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                        <li class="social-link">
-                            <a href="https://line.me/ti/p/~mo-banzu" aria-label="LINE" target="_blank">
+                            <a href="https://line.me/ti/p/~xiv.n" aria-label="LINE" target="_blank">
                                 <i class="fab fa-line"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <span class="copyright"><i class="fas fa-copyright"></i> 2020 Mo-banzu</span>
+                <span class="copyright"><i class="fas fa-copyright"></i> 2025 xiv.n / N._.N</span>
             </div>
         </div>
     </footer>
