--- a/music.html
+++ b/music.html
@@ -4,28 +4,28 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Music | Mo-banzu</title>
+    <title>Music | Nack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic'>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta charset="UTF-8">
-    <meta property="og:title" content="Music | Mo-banzu" />
+    <meta property="og:title" content="Music | Nack" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://Mo-banzu.github.io/music" />
+    <meta property="og:url" content="https://tp14x.github.io/N._.N/music.html" />
     <meta property="og:description" content="Here is a my music passion." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Music | Mo-banzu">
+    <meta name="twitter:title" content="Music | Nack">
     <meta name="twitter:description" content="Music passion.">
     <meta name="twitter:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png">
-    <meta name="twitter:site" content="@mo-banzu">
+    <meta name="twitter:site" content="@xiv.n / N._.N">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="copyright" content="Mo-banzu">
+    <meta name="copyright" content="XIV.N / N._.N">
     <meta name="description" content="Here is a my music passion.">
     <meta name="keywords" content="Mo-banzu, Nothing Here, Maybe there will be something special here.">
     <meta name="robots" content="noindex, nofollow" />
-    <link rel="canonical" href="https://Mo-banzu.github.io/music" />
+    <link rel="canonical" href="https://tp14x.github.io/N._.N/music.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
