--- a/music.html
+++ b/music.html
@@ -56,7 +56,7 @@
                 <h2><span class="pink"></span></h2>
     </div>
     <div class="album-cover">
-        <img src="./img/mo-banzu.png" alt="album cover" />
+        <img src="./img/XIV.N_IMAGE.jpg" alt="album cover" />
     </div>
     <div class="song-info">
         <center>
