--- a/music.html
+++ b/music.html
@@ -60,9 +60,9 @@
     </div>
     <div class="song-info">
         <center>
-            <p class="title">unravel [Lofi] 東京喰種 （ トーキョーグール ）</p>
+            <p class="title">Song name : losing_interest</p>
         <center>
-            <p class="artist">Kijugo</p>
+            <p class="artist">Paycheck · Shiloh Dynasty</p>
     </div>
     <div class="bottom-controls">
         <div id="repeat">
