--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="About Me | NACK" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tp14x.github.io/N._.N/about" />
-    <meta property="og:description" content="Hi! I'm Mo-banzu. In, a room full ice cream, I'd still stare at you." />
+    <meta property="og:description" content="Hi! I'm Suradet. In, a room full ice cream, I'd still stare at you." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png" />
     <meta name="twitter:card" content="summary">
@@ -47,7 +47,7 @@
         <section id="profile">
             <div class="page-title">
                 <img src="./img/me.svg" alt="Smile Icon">
-                <h2>Mo-banzu.<span class="pink">profile</span></h2>
+                <h2>Nack - Suradet.<span class="pink">profile</span></h2>
             </div>
             <p class="section-description"> Hi! I'm Suradet Konsan. I've been studying with computers and technology for most of my life being technical support for friends and family, and Nothing special here, Maybe there will be something special here.</p>
             <div class="profile-container">
@@ -66,11 +66,11 @@
                     <div class="terminal-window">
                         <div class="statement">
                             <p class="input"> Nack.<span class="green">location</span></p>
-                            <p class="return">Phrae , thailand</p>
+                            <p class="return">Phrae , Thailand</p>
                         </div>
                         <div class="statement">
                             <p class="input">Nack.<span class="green">languages</span></p>
-                            <p class="return">[thailand, english]</p>
+                            <p class="return">[Thailand, English]</p>
                         </div>
                         <div class="statement">
                             <p class="input">Nack.<span class="green">activity</span></p>
