--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://tp14x.github.io/N._.N/" />
     <meta property="og:description" content="Hi! I'm Suradet Konsan." />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="https://user-images.githubusercontent.com/14011726/94132137-7d4fc100-fe7c-11ea-8512-69f90cb65e48.png" />
+    <meta property="og:image" content="https://scontent.fbkk29-8.fna.fbcdn.net/v/t39.30808-6/457325902_522802840428042_2074005620070842067_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=JOW3qzUi0bcQ7kNvgHHp3Bl&_nc_oc=Adhb13ofb3Pr6Uyq5wADKPbxcGruW0ZNF2zlXHeiG29Whnpu6diHTQ9nsYpqirJv0ovJ5FBmMzdAgLeX7R2i7YwS&_nc_zt=23&_nc_ht=scontent.fbkk29-8.fna&_nc_gid=AvSm1-wTc0TrYnrRtwB9FvE&oh=00_AYAi7Y3rBL5o18046YQpRyrWf-DhENeoEJc5NETbEmLJsQ&oe=67BE1881" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Nack._.N">
     <meta name="twitter:description" content="Welcome to My Website.">
