--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Nack._.N">
     <meta name="twitter:description" content="Welcome to My Website.">
-    <meta name="twitter:image" content="https://Mo-banzu.github.io/img/me-icon-smiling.png">
+    <meta name="twitter:image" content="https://scontent.fbkk29-4.fna.fbcdn.net/v/t39.30808-6/449685433_485063127535347_5335361461018418418_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=HEVivijKZw8Q7kNvgGOJzyM&_nc_oc=AdgkHoj3rEzSsr1cQJGWHRVNctWkAxCqBAlDI28m7AzRhEBoxpLlTyMzLbFlmDp1ClZ6c_6XBXNtqVTGSX_1EJwZ&_nc_zt=23&_nc_ht=scontent.fbkk29-4.fna&_nc_gid=A45hiy4MmUv5xrIUOCNiMsR&oh=00_AYDRMUv9LTgEwYKxSh0AYTBKzbyhgwdDHFaSuC2pJ23YFw&oe=67BE0DF0">
     <meta name="twitter:site" content="@xiv.n / N._.N">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="copyright" content="NACK">
