--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <nav class="nav">
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
-                <li class="nav-item"><a href="about.html">About</a></li>      <!-- แก้ไขจาก /about เป็น about.html -->
-                <li class="nav-item"><a href="music.html">Music</a></li>      <!-- แก้ไขจาก /music เป็น music.html -->
+                <li class="nav-item"><a href="about.html">About</a></li>
+                <li class="nav-item"><a href="music.html">Music</a></li>
             </ul>
         </nav>
     </header>
