--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="art-me">
-                <img src="./img/me-icon.gif" alt="Me">
+                <img src="./img/me-icon.jpg" alt="Me">
             </div>
             <div class="landing-page-socials">
                 <ul>
