--- a/about.html
+++ b/about.html
@@ -52,11 +52,11 @@
             <p class="section-description"> Hi! I'm Suradet Konsan. I've been studying with computers and technology for most of my life being technical support for friends and family, and Nothing special here, Maybe there will be something special here.</p>
             <div class="profile-container">
                 <div class="me-icon-container">
-                    <img class="me-icon" src="./img/me-icon.gif" alt="Icon of myself is a cartoon character in the Tokyo Ghoul anime named Juuzou Suzuya" title="Juuzou Suzuya. Boku wa jibun ga mukatsuku yatsu wa dou natte mo ii desu.">
+                    <img class="me-icon" src="./img/me-image-2.jpg" alt="Icon of myself is a cartoon character in the Tokyo Ghoul anime named Juuzou Suzuya" title="Juuzou Suzuya. Boku wa jibun ga mukatsuku yatsu wa dou natte mo ii desu.">
                 </div>
                 <div class="terminal-container">
                     <div class="terminal-header">
-                        <div id="terminal-title">14Jan2004.exe</div>
+                        <div id="terminal-title">14_Jan_2004.exe</div>
                         <div class="right-side-buttons">
                             <i class="fas fa-window-minimize"></i>
                             <i class="fas fa-window-restore"></i>
