--- a/about.html
+++ b/about.html
@@ -31,7 +31,17 @@
     <link rel="stylesheet" href="./css/header.css" type="text/css">
     <link rel="stylesheet" href="./css/about.css" type="text/css">
     <link rel="stylesheet" href="./css/footer.css" type="text/css">
+    
+    <style>
+        .me-icon {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+        }
+    </style>
 </head>
+
 <body>
     <header class="header">
         <a href="https://tp14x.github.io/N._.N/" class="header-logo">@xiv.n / N._.N</a>
@@ -83,8 +93,6 @@
                 </div>
             </div>
         </section>
-        </div>
-        </section>
         <section id="operation-system">
             <h3>Operation System</h3>
             <div class="operation-system-container">
@@ -94,8 +102,6 @@
             </div>
             <div class="skill">
                 <img src="./img/windows.svg" alt="Windows Icon"><span>Windows OS</span>
-            </div>
-            </div>
             </div>
         </section>
         <section id="all-social-media">
