--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
             <p class="section-description"> Hi! I'm Suradet Konsan. I've been studying with computers and technology for most of my life being technical support for friends and family, and Nothing special here, Maybe there will be something special here.</p>
             <div class="profile-container">
                 <div class="me-icon-container">
-                    <img class="me-icon" src="./img/me-image-2.jpg" alt="Icon of myself is a cartoon character in the Tokyo Ghoul anime named Juuzou Suzuya" title="Juuzou Suzuya. Boku wa jibun ga mukatsuku yatsu wa dou natte mo ii desu." onclick="moveImage()">
+                    <img class="me-icon" src="./img/me-image-2.jpg" alt="Icon of myself is a cartoon character in the Tokyo Ghoul anime named Juuzou Suzuya" title="Juuzou Suzuya. Boku wa jibun ga mukatsuku yatsu wa dou natte mo ii desu.">
                 </div>
                 <div class="terminal-container">
                     <div class="terminal-header">
@@ -176,13 +176,6 @@
             <span class="copyright"><i class="fas fa-copyright"></i> 2025 N._.N</span>
         </div>
     </footer>
-    <script>
-        function moveImage() {
-            const movedImage = document.getElementById('movedImage');
-            movedImage.style.top = "50px"; // เปลี่ยนตำแหน่งของรูป
-            movedImage.style.left = "50px"; // เปลี่ยนตำแหน่งของรูป
-        }
-    </script>
 </body>
 
 </html>
