--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
                     <i class="fas fa-envelope"></i>
                     Send me an Email
                 </a>
-                <a href="https://line.me/ti/p/~xiv.n" class="social-media-item">
+                <a href="line://nv/profilePopup/mid=u5f6dffe042698b52ada1c8e7d7869855" class="social-media-item">
                     <i class="fab fa-line"></i>
                     Chat me an LINE Messenger
                 </a>
@@ -149,7 +149,7 @@
                             </a>
                         </li>
                         <li class="social-link">
-                            <a href="https://line.me/ti/p/~xiv.n" aria-label="LINE" target="_blank">
+                            <a href="line://nv/profilePopup/mid=u5f6dffe042698b52ada1c8e7d7869855" aria-label="LINE" target="_blank">
                                 <i class="fab fa-line"></i>
                             </a>
                         </li>
