--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <p>Website DEMO</p>
                 </div>
                 <div class="cta-container line-container">
-                    <a href="https://line.me/ti/p/~xiv.n" class="cta line-button">
+                    <a href="line://nv/profilePopup/mid=u5f6dffe042698b52ada1c8e7d7869855" class="cta line-button">
                         <img src="./img/line.svg" alt="LINE Icon">
                         <span>LINE Messenger</span>
                     </a>
@@ -71,7 +71,7 @@
                         </a>
                     </li>
                     <li class="social-link">
-                        <a href="https://line.me/ti/p/~xiv.n" aria-label="LINE" target="_blank">
+                        <a href="line://nv/profilePopup/mid=u5f6dffe042698b52ada1c8e7d7869855" aria-label="LINE" target="_blank">
                             <i class="fab fa-line"></i>
                         </a>
                     </li>
