--- a/music.html
+++ b/music.html
@@ -110,7 +110,7 @@
                             </a>
                         </li>
                         <li class="social-link">
-                            <a href="https://line.me/ti/p/~xiv.n" aria-label="LINE" target="_blank">
+                            <a href="line://nv/profilePopup/mid=u5f6dffe042698b52ada1c8e7d7869855" aria-label="LINE" target="_blank">
                                 <i class="fab fa-line"></i>
                             </a>
                         </li>
